@@ -20,6 +20,7 @@ package org.apache.flink.runtime.deployment;
 
 import org.apache.flink.annotation.VisibleForTesting;
 import org.apache.flink.api.common.JobID;
+import org.apache.flink.runtime.blob.BlobWriter;
 import org.apache.flink.runtime.blob.PermanentBlobKey;
 import org.apache.flink.runtime.checkpoint.JobManagerTaskRestore;
 import org.apache.flink.runtime.clusterframework.types.AllocationID;
@@ -28,6 +29,8 @@ import org.apache.flink.runtime.execution.ExecutionState;
 import org.apache.flink.runtime.executiongraph.Execution;
 import org.apache.flink.runtime.executiongraph.ExecutionAttemptID;
 import org.apache.flink.runtime.executiongraph.ExecutionVertex;
+import org.apache.flink.runtime.executiongraph.ExecutionVertexInputInfo;
+import org.apache.flink.runtime.executiongraph.IndexRange;
 import org.apache.flink.runtime.executiongraph.IntermediateResult;
 import org.apache.flink.runtime.executiongraph.IntermediateResultPartition;
 import org.apache.flink.runtime.executiongraph.InternalExecutionGraphAccessor;
@@ -38,19 +41,28 @@ import org.apache.flink.runtime.io.network.partition.ResultPartitionType;
 import org.apache.flink.runtime.jobgraph.IntermediateDataSetID;
 import org.apache.flink.runtime.jobgraph.IntermediateResultPartitionID;
 import org.apache.flink.runtime.jobgraph.JobType;
+import org.apache.flink.runtime.scheduler.ClusterDatasetCorruptedException;
 import org.apache.flink.runtime.scheduler.strategy.ConsumedPartitionGroup;
 import org.apache.flink.runtime.shuffle.ShuffleDescriptor;
 import org.apache.flink.runtime.shuffle.UnknownShuffleDescriptor;
 import org.apache.flink.types.Either;
+import org.apache.flink.util.CompressedSerializedValue;
 import org.apache.flink.util.SerializedValue;
 
 import javax.annotation.Nullable;
 
 import java.io.IOException;
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
+
+import static org.apache.flink.util.Preconditions.checkNotNull;
+import static org.apache.flink.util.Preconditions.checkState;
 
 /**
  * Factory of {@link TaskDeploymentDescriptor} to deploy {@link
@@ -58,117 +70,237 @@ import java.util.Optional;
  */
 public class TaskDeploymentDescriptorFactory {
     private final ExecutionAttemptID executionId;
-    private final int attemptNumber;
     private final MaybeOffloaded<JobInformation> serializedJobInformation;
     private final MaybeOffloaded<TaskInformation> taskInfo;
     private final JobID jobID;
     private final PartitionLocationConstraint partitionDeploymentConstraint;
-    private final int subtaskIndex;
-    private final List<List<IntermediateResultPartition>> consumedPartitions;
+    private final List<ConsumedPartitionGroup> consumedPartitionGroups;
+    private final Function<IntermediateResultPartitionID, IntermediateResultPartition>
+            resultPartitionRetriever;
+    private final BlobWriter blobWriter;
+    private final Map<IntermediateDataSetID, ShuffleDescriptorAndIndex[]>
+            consumedClusterPartitionShuffleDescriptors;
+    private final Function<IntermediateDataSetID, ExecutionVertexInputInfo>
+            executionVertexInputInfoRetriever;
+    private final boolean nonFinishedHybridPartitionShouldBeUnknown;
 
     private TaskDeploymentDescriptorFactory(
             ExecutionAttemptID executionId,
-            int attemptNumber,
             MaybeOffloaded<JobInformation> serializedJobInformation,
             MaybeOffloaded<TaskInformation> taskInfo,
             JobID jobID,
             PartitionLocationConstraint partitionDeploymentConstraint,
-            int subtaskIndex,
-            List<List<IntermediateResultPartition>> consumedPartitions) {
+            List<ConsumedPartitionGroup> consumedPartitionGroups,
+            Function<IntermediateResultPartitionID, IntermediateResultPartition>
+                    resultPartitionRetriever,
+            BlobWriter blobWriter,
+            boolean nonFinishedHybridPartitionShouldBeUnknown,
+            Map<IntermediateDataSetID, ShuffleDescriptorAndIndex[]>
+                    consumedClusterPartitionShuffleDescriptors,
+            Function<IntermediateDataSetID, ExecutionVertexInputInfo>
+                    executionVertexInputInfoRetriever) {
         this.executionId = executionId;
-        this.attemptNumber = attemptNumber;
         this.serializedJobInformation = serializedJobInformation;
         this.taskInfo = taskInfo;
         this.jobID = jobID;
         this.partitionDeploymentConstraint = partitionDeploymentConstraint;
-        this.subtaskIndex = subtaskIndex;
-        this.consumedPartitions = consumedPartitions;
+        this.consumedPartitionGroups = consumedPartitionGroups;
+        this.resultPartitionRetriever = resultPartitionRetriever;
+        this.blobWriter = blobWriter;
+        this.nonFinishedHybridPartitionShouldBeUnknown = nonFinishedHybridPartitionShouldBeUnknown;
+        this.consumedClusterPartitionShuffleDescriptors =
+                consumedClusterPartitionShuffleDescriptors;
+        this.executionVertexInputInfoRetriever = checkNotNull(executionVertexInputInfoRetriever);
     }
 
     public TaskDeploymentDescriptor createDeploymentDescriptor(
             AllocationID allocationID,
             @Nullable JobManagerTaskRestore taskRestore,
-            Collection<ResultPartitionDeploymentDescriptor> producedPartitions) {
+            Collection<ResultPartitionDeploymentDescriptor> producedPartitions)
+            throws IOException {
         return new TaskDeploymentDescriptor(
                 jobID,
                 serializedJobInformation,
                 taskInfo,
                 executionId,
                 allocationID,
-                subtaskIndex,
-                attemptNumber,
                 taskRestore,
                 new ArrayList<>(producedPartitions),
                 createInputGateDeploymentDescriptors());
     }
 
-    private List<InputGateDeploymentDescriptor> createInputGateDeploymentDescriptors() {
-        List<InputGateDeploymentDescriptor> inputGates = new ArrayList<>(consumedPartitions.size());
+    private List<InputGateDeploymentDescriptor> createInputGateDeploymentDescriptors()
+            throws IOException {
+        List<InputGateDeploymentDescriptor> inputGates =
+                new ArrayList<>(consumedPartitionGroups.size());
 
-        for (List<IntermediateResultPartition> partitions : consumedPartitions) {
+        for (ConsumedPartitionGroup consumedPartitionGroup : consumedPartitionGroups) {
             // If the produced partition has multiple consumers registered, we
             // need to request the one matching our sub task index.
             // TODO Refactor after removing the consumers from the intermediate result partitions
-            IntermediateResultPartition resultPartition = partitions.get(0);
 
-            int numConsumers = resultPartition.getConsumerVertexGroups().get(0).size();
+            IntermediateResult consumedIntermediateResult =
+                    resultPartitionRetriever
+                            .apply(consumedPartitionGroup.getFirst())
+                            .getIntermediateResult();
 
-            int queueToRequest = subtaskIndex % numConsumers;
-            IntermediateResult consumedIntermediateResult = resultPartition.getIntermediateResult();
             IntermediateDataSetID resultId = consumedIntermediateResult.getId();
             ResultPartitionType partitionType = consumedIntermediateResult.getResultType();
+            IndexRange subpartitionRange =
+                    executionVertexInputInfoRetriever.apply(resultId).getSubpartitionIndexRange();
 
             inputGates.add(
                     new InputGateDeploymentDescriptor(
                             resultId,
                             partitionType,
-                            queueToRequest,
-                            getConsumedPartitionShuffleDescriptors(partitions)));
+                            subpartitionRange,
+                            consumedPartitionGroup.size(),
+                            getConsumedPartitionShuffleDescriptors(
+                                    consumedIntermediateResult, consumedPartitionGroup)));
+        }
+
+        for (Map.Entry<IntermediateDataSetID, ShuffleDescriptorAndIndex[]> entry :
+                consumedClusterPartitionShuffleDescriptors.entrySet()) {
+            // For FLIP-205, the JobGraph generating side ensure that the cluster partition is
+            // produced with only one subpartition. Therefore, we always consume the partition with
+            // subpartition index of 0.
+            inputGates.add(
+                    new InputGateDeploymentDescriptor(
+                            entry.getKey(),
+                            ResultPartitionType.BLOCKING_PERSISTENT,
+                            0,
+                            entry.getValue()));
         }
 
         return inputGates;
     }
 
-    private ShuffleDescriptor[] getConsumedPartitionShuffleDescriptors(
-            List<IntermediateResultPartition> partitions) {
+    private List<MaybeOffloaded<ShuffleDescriptorAndIndex[]>>
+            getConsumedPartitionShuffleDescriptors(
+                    IntermediateResult intermediateResult,
+                    ConsumedPartitionGroup consumedPartitionGroup)
+                    throws IOException {
+        CachedShuffleDescriptors cachedShuffleDescriptors =
+                intermediateResult.getCachedShuffleDescriptors(consumedPartitionGroup);
+        if (cachedShuffleDescriptors == null) {
+            cachedShuffleDescriptors =
+                    intermediateResult.cacheShuffleDescriptors(
+                            consumedPartitionGroup,
+                            // compute all shuffle descriptors if it is not cached before.
+                            computeConsumedPartitionShuffleDescriptors(consumedPartitionGroup));
+        }
+        cachedShuffleDescriptors.serializeShuffleDescriptors(
+                this::serializeAndTryOffloadShuffleDescriptor);
 
-        ShuffleDescriptor[] shuffleDescriptors = new ShuffleDescriptor[partitions.size()];
+        return cachedShuffleDescriptors.getAllSerializedShuffleDescriptors();
+    }
+
+    private ShuffleDescriptorAndIndex[] computeConsumedPartitionShuffleDescriptors(
+            ConsumedPartitionGroup consumedPartitionGroup) {
+
+        ShuffleDescriptorAndIndex[] shuffleDescriptors =
+                new ShuffleDescriptorAndIndex[consumedPartitionGroup.size()];
         // Each edge is connected to a different result partition
-        for (int i = 0; i < partitions.size(); i++) {
+        int i = 0;
+        for (IntermediateResultPartitionID partitionId : consumedPartitionGroup) {
             shuffleDescriptors[i] =
-                    getConsumedPartitionShuffleDescriptor(
-                            partitions.get(i), partitionDeploymentConstraint);
+                    new ShuffleDescriptorAndIndex(
+                            getConsumedPartitionShuffleDescriptor(
+                                    resultPartitionRetriever.apply(partitionId),
+                                    partitionDeploymentConstraint,
+                                    nonFinishedHybridPartitionShouldBeUnknown),
+                            i);
+            i++;
         }
         return shuffleDescriptors;
     }
 
-    public static TaskDeploymentDescriptorFactory fromExecutionVertex(
-            ExecutionVertex executionVertex, int attemptNumber) throws IOException {
-        InternalExecutionGraphAccessor internalExecutionGraphAccessor =
+    private MaybeOffloaded<ShuffleDescriptorAndIndex[]> serializeAndTryOffloadShuffleDescriptor(
+            ShuffleDescriptorAndIndex[] shuffleDescriptors) throws IOException {
+
+        final CompressedSerializedValue<ShuffleDescriptorAndIndex[]> compressedSerializedValue =
+                CompressedSerializedValue.fromObject(shuffleDescriptors);
+
+        final Either<SerializedValue<ShuffleDescriptorAndIndex[]>, PermanentBlobKey>
+                serializedValueOrBlobKey =
+                        BlobWriter.tryOffload(compressedSerializedValue, jobID, blobWriter);
+
+        if (serializedValueOrBlobKey.isLeft()) {
+            return new TaskDeploymentDescriptor.NonOffloaded<>(serializedValueOrBlobKey.left());
+        } else {
+            return new TaskDeploymentDescriptor.Offloaded<>(serializedValueOrBlobKey.right());
+        }
+    }
+
+    public static TaskDeploymentDescriptorFactory fromExecution(Execution execution)
+            throws IOException, ClusterDatasetCorruptedException {
+        final ExecutionVertex executionVertex = execution.getVertex();
+        final InternalExecutionGraphAccessor internalExecutionGraphAccessor =
                 executionVertex.getExecutionGraphAccessor();
-
-        final List<List<IntermediateResultPartition>> consumedPartitions = new ArrayList<>();
-
-        for (ConsumedPartitionGroup partitionGroup :
-                executionVertex.getAllConsumedPartitionGroups()) {
-            List<IntermediateResultPartition> partitions = new ArrayList<>();
-            for (IntermediateResultPartitionID partitionId : partitionGroup) {
-                partitions.add(
-                        internalExecutionGraphAccessor.getResultPartitionOrThrow(partitionId));
-            }
-            consumedPartitions.add(partitions);
+        Map<IntermediateDataSetID, ShuffleDescriptorAndIndex[]> clusterPartitionShuffleDescriptors;
+        try {
+            clusterPartitionShuffleDescriptors =
+                    getClusterPartitionShuffleDescriptors(executionVertex);
+        } catch (Throwable e) {
+            throw new ClusterDatasetCorruptedException(
+                    e,
+                    executionVertex
+                            .getJobVertex()
+                            .getJobVertex()
+                            .getIntermediateDataSetIdsToConsume());
         }
 
         return new TaskDeploymentDescriptorFactory(
-                executionVertex.getCurrentExecutionAttempt().getAttemptId(),
-                attemptNumber,
+                execution.getAttemptId(),
                 getSerializedJobInformation(internalExecutionGraphAccessor),
                 getSerializedTaskInformation(
                         executionVertex.getJobVertex().getTaskInformationOrBlobKey()),
                 internalExecutionGraphAccessor.getJobID(),
                 internalExecutionGraphAccessor.getPartitionLocationConstraint(),
-                executionVertex.getParallelSubtaskIndex(),
-                consumedPartitions);
+                executionVertex.getAllConsumedPartitionGroups(),
+                internalExecutionGraphAccessor::getResultPartitionOrThrow,
+                internalExecutionGraphAccessor.getBlobWriter(),
+                internalExecutionGraphAccessor.isNonFinishedHybridPartitionShouldBeUnknown(),
+                clusterPartitionShuffleDescriptors,
+                executionVertex::getExecutionVertexInputInfo);
+    }
+
+    private static Map<IntermediateDataSetID, ShuffleDescriptorAndIndex[]>
+            getClusterPartitionShuffleDescriptors(ExecutionVertex executionVertex) {
+        final InternalExecutionGraphAccessor internalExecutionGraphAccessor =
+                executionVertex.getExecutionGraphAccessor();
+        final List<IntermediateDataSetID> consumedClusterDataSetIds =
+                executionVertex.getJobVertex().getJobVertex().getIntermediateDataSetIdsToConsume();
+        Map<IntermediateDataSetID, ShuffleDescriptorAndIndex[]> clusterPartitionShuffleDescriptors =
+                new HashMap<>();
+
+        for (IntermediateDataSetID consumedClusterDataSetId : consumedClusterDataSetIds) {
+            List<? extends ShuffleDescriptor> shuffleDescriptors =
+                    internalExecutionGraphAccessor.getClusterPartitionShuffleDescriptors(
+                            consumedClusterDataSetId);
+
+            // For FLIP-205, the job graph generating side makes sure that the producer and consumer
+            // of the cluster partition have the same parallelism and each consumer Task consumes
+            // one output partition of the producer.
+            checkState(
+                    executionVertex.getTotalNumberOfParallelSubtasks() == shuffleDescriptors.size(),
+                    "The parallelism (%s) of the cache consuming job vertex is "
+                            + "different from the number of shuffle descriptors (%s) of the intermediate data set",
+                    executionVertex.getTotalNumberOfParallelSubtasks(),
+                    shuffleDescriptors.size());
+
+            clusterPartitionShuffleDescriptors.put(
+                    consumedClusterDataSetId,
+                    new ShuffleDescriptorAndIndex[] {
+                        new ShuffleDescriptorAndIndex(
+                                shuffleDescriptors.get(executionVertex.getParallelSubtaskIndex()),
+                                // For FLIP-205, the JobGraph generating side ensure that the
+                                // cluster partition is produced with only one subpartition.
+                                // Therefore, this index is always 0.
+                                0)
+                    });
+        }
+        return clusterPartitionShuffleDescriptors;
     }
 
     private static MaybeOffloaded<JobInformation> getSerializedJobInformation(
@@ -191,8 +323,9 @@ public class TaskDeploymentDescriptorFactory {
 
     public static ShuffleDescriptor getConsumedPartitionShuffleDescriptor(
             IntermediateResultPartition consumedPartition,
-            PartitionLocationConstraint partitionDeploymentConstraint) {
-        Execution producer = consumedPartition.getProducer().getCurrentExecutionAttempt();
+            PartitionLocationConstraint partitionDeploymentConstraint,
+            boolean nonFinishedHybridPartitionShouldBeUnknown) {
+        Execution producer = consumedPartition.getProducer().getPartitionProducer();
 
         ExecutionState producerState = producer.getState();
         Optional<ResultPartitionDeploymentDescriptor> consumedPartitionDescriptor =
@@ -204,40 +337,59 @@ public class TaskDeploymentDescriptorFactory {
         return getConsumedPartitionShuffleDescriptor(
                 consumedPartitionId,
                 consumedPartition.getResultType(),
-                consumedPartition.isConsumable(),
+                consumedPartition.hasDataAllProduced(),
                 producerState,
                 partitionDeploymentConstraint,
-                consumedPartitionDescriptor.orElse(null));
+                consumedPartitionDescriptor.orElse(null),
+                nonFinishedHybridPartitionShouldBeUnknown);
     }
 
     @VisibleForTesting
     static ShuffleDescriptor getConsumedPartitionShuffleDescriptor(
             ResultPartitionID consumedPartitionId,
             ResultPartitionType resultPartitionType,
-            boolean isConsumable,
+            boolean hasAllDataProduced,
             ExecutionState producerState,
             PartitionLocationConstraint partitionDeploymentConstraint,
-            @Nullable ResultPartitionDeploymentDescriptor consumedPartitionDescriptor) {
+            @Nullable ResultPartitionDeploymentDescriptor consumedPartitionDescriptor,
+            boolean nonFinishedHybridPartitionShouldBeUnknown) {
         // The producing task needs to be RUNNING or already FINISHED
-        if ((resultPartitionType.isPipelined() || isConsumable)
+        if ((resultPartitionType.canBePipelinedConsumed() || hasAllDataProduced)
                 && consumedPartitionDescriptor != null
                 && isProducerAvailable(producerState)) {
+            if (resultPartitionType.isHybridResultPartition()
+                    && nonFinishedHybridPartitionShouldBeUnknown) {
+                // if producer is not finished, shuffle descriptor should be unknown.
+                if (producerState != ExecutionState.FINISHED) {
+                    checkState(
+                            partitionDeploymentConstraint
+                                    == PartitionLocationConstraint.CAN_BE_UNKNOWN,
+                            "partition location constraint should allow unknown shuffle descriptor when nonFinishedHybridPartitionShouldBeUnknown is true.");
+                    return new UnknownShuffleDescriptor(consumedPartitionId);
+                }
+            }
             // partition is already registered
             return consumedPartitionDescriptor.getShuffleDescriptor();
         } else if (partitionDeploymentConstraint == PartitionLocationConstraint.CAN_BE_UNKNOWN) {
             // The producing task might not have registered the partition yet
+            //
+            // Currently, UnknownShuffleDescriptor will be created only if there is an intra-region
+            // blocking edge in the graph. This means that when its consumer restarts, the
+            // producer of the UnknownShuffleDescriptors will also restart. Therefore, it's safe to
+            // cache UnknownShuffleDescriptors and there's no need to update the cache when the
+            // corresponding partition becomes consumable.
             return new UnknownShuffleDescriptor(consumedPartitionId);
         } else {
             // throw respective exceptions
             throw handleConsumedPartitionShuffleDescriptorErrors(
-                    consumedPartitionId, resultPartitionType, isConsumable, producerState);
+                    consumedPartitionId, resultPartitionType, hasAllDataProduced, producerState);
         }
     }
 
     private static RuntimeException handleConsumedPartitionShuffleDescriptorErrors(
             ResultPartitionID consumedPartitionId,
             ResultPartitionType resultPartitionType,
-            boolean isConsumable,
+            boolean hasAllDataProduced,
             ExecutionState producerState) {
         String msg;
         if (isProducerFailedOrCanceled(producerState)) {
@@ -250,8 +402,11 @@ public class TaskDeploymentDescriptorFactory {
             msg =
                     String.format(
                             "Trying to consume an input partition whose producer "
-                                    + "is not ready (result type: %s, partition consumable: %s, producer state: %s, partition id: %s).",
-                            resultPartitionType, isConsumable, producerState, consumedPartitionId);
+                                    + "is not ready (result type: %s, hasAllDataProduced: %s, producer state: %s, partition id: %s).",
+                            resultPartitionType,
+                            hasAllDataProduced,
+                            producerState,
+                            consumedPartitionId);
         }
         return new IllegalStateException(msg);
     }
@@ -290,6 +445,30 @@ public class TaskDeploymentDescriptorFactory {
                                     "Unknown JobType %s. Cannot derive partition location constraint for it.",
                                     jobType));
             }
+        }
+    }
+
+    /**
+     * This class represents the shuffle descriptor with it index in {@link ConsumedPartitionGroup}.
+     */
+    public static class ShuffleDescriptorAndIndex implements Serializable {
+        private static final long serialVersionUID = 1L;
+
+        private final ShuffleDescriptor shuffleDescriptor;
+
+        private final int index;
+
+        public ShuffleDescriptorAndIndex(ShuffleDescriptor shuffleDescriptor, int index) {
+            this.shuffleDescriptor = shuffleDescriptor;
+            this.index = index;
+        }
+
+        public ShuffleDescriptor getShuffleDescriptor() {
+            return shuffleDescriptor;
+        }
+
+        public int getIndex() {
+            return index;
         }
     }
 }
